--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b277668d-75e6-4950-bce2-99a834a598e1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
